# opencode_hack_research_agent

./: .env.example  .gitignore  README.md  justfile  package.json  research-agent-sse-events.jsonl
apps/api/: pyproject.toml
apps/api/evals/: README.md  cases.jsonl
apps/api/scripts/: kite_login.py  run_evals.py
apps/api/src/research_agent/: __init__.py  agents.py  charges.py  main.py  memory.py  order_tracker.py  settings.py  telemetry.py
apps/api/src/research_agent/agents/: __init__.py  financial_research.py
apps/api/src/research_agent/prompts/: __init__.py  execution.py  financial_research.py
apps/api/src/research_agent/tools/: __init__.py  financial.py  kite.py  memory.py  technical.py  timeout.py
apps/api/tests/: test_evals.py  test_health.py  test_memory.py  test_sector_metadata.py
apps/cli/: eslint.config.js  package.json
apps/cli/src/: app.jsx  bloomberg-workbench.jsx  demo-series.js  index.jsx  markdown-ink.jsx  prompt-composer.jsx  right-blotter.jsx  theme.js  ticker-context.js  ticker-context.test.js  ticker-guess.js  trading-chart.jsx  use-market-snapshot.js  yahoo-chart.js
apps/cli/src/api/: client.js  replay.js
apps/web/: index.html  package.json  vite.config.js
apps/web/src/: app.jsx  main.jsx  styles.css  theme.js
apps/web/src/api/: client.js  steps.js  yahoo.js
apps/web/src/components/: Blotter.jsx  Chart.jsx  GradientText.jsx  Header.jsx  Markdown.jsx  MarketPulse.jsx  PromptComposer.jsx  Steps.jsx  composer.jsx  ui.jsx
apps/web/src/hooks/: useMarketSnapshot.js
scripts/: cli-entry.sh  dev.sh  web-dev.sh
