[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-api"
version = "0.1.0"
description = "Agno/FastAPI backend for the OpenCode hack research agent"
requires-python = ">=3.11"
dependencies = [
  "agno",
  "ddgs",
  "fastapi[standard]",
  "kiteconnect",
  "openai",
  "pandas",
  "pydantic-settings",
  "uvicorn[standard]",
  "yfinance",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
