[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-api"
version = "0.1.0"
description = "Agno/FastAPI backend for the OpenCode hack research agent"
requires-python = ">=3.11"
dependencies = [
  "agno",
  "exa_py",
  "fastapi[standard]",
  "kiteconnect",
  "langfuse>=4.3.1",
  "openai",
  "openinference-instrumentation-agno>=0.1.30",
  "openinference-instrumentation-openai>=0.1.44",
  "opentelemetry-exporter-otlp>=1.41.0",
  "opentelemetry-instrumentation-fastapi>=0.62b0",
  "opentelemetry-instrumentation-httpx>=0.62b0",
  "opentelemetry-sdk>=1.41.0",
  "pandas",
  "pydantic-settings",
  "uvicorn[standard]",
  "yfinance",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
